Fri Jul 14 16:55:00 BST 2000 Olly Betts

	* omega: query parser now treats `a-b' as `"a b"' while `a -b' means
	  `a NOT b'; fixed exception parsing empty query

Thu Jul 13 18:15:00 BST 2000 Olly Betts

	* omega: tweaked log format; don't calculate topdoc if we're only
	  going to throw away the answer; percentage scores now reach 100%
	  when all terms match top document; fixed record to field
	  splitting; created omega/README; miscellaneous fettling

Wed Jul 12 15:57:00 BST 2000 Olly Betts

	* omega: removed some unused system headers

Wed Jul 12 15:25:00 BST 2000 Olly Betts

	* omega: tidied and made more consistent

Wed Jul 12 15:00:00 BST 2000 Olly Betts

	* omega: added split() to split string into a vector; split out
	  utils.{cc,h} to house split(), int_to_string(), and string_to_int;
	  R CGI parameter can now list many document ids separated by `.';
	  dead declarations pruned

Wed Jul 12 13:27:00 BST 2000 Olly Betts

	* omega: allow multiple DB parameters and DB parameters listing
	  several databases (e.g. DB=one/two/three); merged logged
	  information into one file; added $dbname; general tidying

Tue Jul 11 18:17:00 BST 2000 Olly Betts

	* omega: implemented `exampl.' in query parser to mean an already
	  stemmed term.  Made `example.com' work as before too (same as
	  `example com')

Tue Jul 11 14:17:00 BST 2000 Olly Betts

	* omega: replaced LEX based query parser with YACC based parser
	  which handles phrases and boolean queries

	* omindex: lowercase tag names; added virtual destructor for
	  HtmlParser class; generate index terms from title	

Mon Jul 10 15:05:00 BST 2000 Olly Betts

	* omega: MORELIKE now works; godmode works to some extent; mset
	  moved into query.cc; empty query handling now less icky; $pages
	  replaced by macro language version; fixed bug which mishandled
	  $xxx{} and $xxx{,...}; added $lastpage, $thispage, $min, $max;
	  $if now takes optional 3rd argument (else clause); now use FMT
	  to choose template
