@@ -46,7 +46,6 @@ void add_bterm(const string &);
 extern om_queryop op;
 
 extern string raw_prob;
-extern OmQuery query;
 extern map<om_docid, bool> ticked;
 extern list<om_termname> new_terms_list;
 extern set<om_termname> new_terms;
