@@ -1,3 +1,7 @@
+Sat Jul 15 15:21:00 BST 2000 Olly Betts
+
+	* omega: started to encapsulatewrap query parser in a class
+
 Fri Jul 14 16:55:00 BST 2000 Olly Betts
 
 	* omega: query parser now treats `a-b' as `"a b"' while `a -b' means
